# testcontainers_test

./: .gitignore  Cargo.toml  README.md  SETUP.md  first_time_setup.sh
.cargo/: config.toml
migrations/: V1__Create_Person_Table.sql  V1__Create_User_Table.sql
src/: config.rs  helpers.rs  lib.rs  main.rs  telemetry.rs
src/domain/: errors.rs  mod.rs  person.rs  user.rs
src/routes/: create_person.rs  get_person.rs  health_check.rs  login.rs  mod.rs  sign_up.rs
static/: index.html  signup.html
tests/: create_person.rs  greet.rs  health_check.rs  main.rs
tests/api/: authentication.rs  create_person.rs  health_check.rs  helpers.rs  main.rs
