[package]
name = "testcontainers_test"
version = "0.1.0"
edition = "2021"

[lib]
path = "./src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "testcontainers_test"

[dependencies]
# Provides us with an HTTP server to... serve HTTP requests
actix-web = "4.1.0"
# async runtime used by actix
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
# async database connection pooling implementation for SQLite.
# provides a bundled version of rusqlite within
deadpool-sqlite = "0.3.1"
# database migration tool that lets us define our database
# by a series of scripts to be run in a specific order
refinery = { version = "0.8.4", features = ["rusqlite"] }
# provides serialization/deserialization to JSON via Actix Web
serde = { version = "1.0.137", features = ["derive"] }
# error handling library
snafu = "0.7.1"
# Tracing dependencies that let us set up robust logging
tracing = { version = "0.1.35", features = ["log"] }
tracing-subscriber = { version = "0.3.14", features = [
    "registry",
    "env-filter",
] }
# formats tracing output using the bunyan format (it's JSON)
tracing-bunyan-formatter = "0.3.3"
# captures regular Rust `log` statements and maps them to our Tracing setup
tracing-log = "0.1.3"
# for generating UUID v4 (currently, used for generating request IDs)
uuid = { version = "1.1.2", features = ["v4"] }

[dev-dependencies]
# used for integration tests to hit our web server
reqwest = { version = "0.11.11", features = ["json"] }
